# sandbox-fgis

./: .dockerignore  .env  .gitignore  LICENSE.md  README.md  deploy.sh  docker-compose.base.yml  docker-compose.local.yml  docker-compose.prod.yml
services/: .env.dev  Dockerfile  pyproject.toml
services/applications/: apps.py  controllers.py  exceptions.py  filters.py  models.py  routers.py  serializers.py  types.py  usecases.py
services/auth/: authentication.py  controllers.py  exceptions.py  permissions.py  routers.py  serializers.py  types.py  usecases.py
services/config/: asgi.py  os.py  urls.py
services/deploy/: gunicorn.conf.py  gunicorn.sh  migrations.sh  pre-install.sh  tests.sh
services/directory/: apps.py  controllers.py  exceptions.py  filters.py  models.py  routers.py  serializers.py  types.py
services/enterprises/: apps.py  exceptions.py  filters.py  models.py  routers.py  serializers.py  types.py
services/knowledge/: apps.py  routers.py
services/manufacturers/: apps.py  routers.py
services/organizations/: adapters.py  controllers.py  exceptions.py  models.py  permissions.py  routers.py  serializers.py  types.py  usecases.py
services/parties/: adapters.py  apps.py  engine.py  filters.py  models.py  routers.py  serializers.py  types.py
services/roles/: apps.py  controllers.py  exceptions.py  models.py  routers.py  types.py  usecases.py
services/training/: apps.py  routers.py
services/users/: controllers.py  exceptions.py  filters.py  managers.py  models.py  permissions.py  routers.py  serializers.py  types.py  usecases.py
(+74 files in other folders)
